--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -8,3 +8,624 @@ paragraph yellow: #ECB12F
 links blue: #2E71A6
 footer links grey: #454245
 */
+
+
+@media(max-width: 768px){
+    body {
+        width: 100%;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        background-color: #540B51;
+    }
+
+    main {
+        background-color: #F3EAE2;
+    }
+
+    nav div #slackLogo {
+        width: 250px; 
+        margin: 40px; 
+    }
+    
+    nav div #searchIconButon {
+        position: absolute;
+        top: 10px;
+        right: 90px;
+    }
+
+    nav div #menuIconButon {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+    }
+    
+    nav div button {
+        background-color: transparent;
+        border: none;
+        margin: 15px;
+    }
+
+    .searchAndMenu {
+        width: 40px;
+        margin: 20px;
+    }
+
+    .searchAndMenu {
+        width: 40px;
+        margin: 20px;
+    }
+
+    #mainTitle {
+        display: flex;
+        flex-direction: column;
+        color: white;
+        font-size: 5rem;
+    }
+
+    #justYellow {
+        color: #ECB12F
+    }
+
+    header h1{
+        text-align: center;
+    }
+
+    .slackIsFree {
+        text-align: center;
+        font-size: 50px;
+    }
+
+    #email-google {
+        display: flex;
+        flex-direction: column;
+    }
+    #emailButon {
+        text-decoration: none;
+        border-radius: 5px;
+        border-style: none;
+        width: 100%;
+        height: 50px;
+        color: #540B51;
+        font-size: 25px;
+        font-weight: bold;
+    }
+
+    #textGoogle {
+        font-size: 25px;
+        font-weight: bold;
+        background-color: #4285F4;
+        width: 100%;
+        border-radius: 5px;
+    }
+    /* no llego a entender como hacerlo*/
+    #googleButon {
+        text-decoration: none;
+        border-radius: 5px;
+        border-style: none;
+        width: 40px;
+    }
+
+    #socialMedia {
+        background-color: #F3EAE2;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .nasa {
+        width: 140px;
+    }
+    .airbnb {
+        width: 170px;
+    }
+
+    .NYTimes {
+        width: 300px;
+    }
+
+    .cropPic {
+        width: 100%
+    }
+
+    .slackPics {
+        width: 100%
+    }
+
+    #socialMediaPhrase {
+        font-size: 36px;
+        text-align: center;
+        margin-top: 0;
+        padding: 50px;
+    }
+
+    .anotherTitles {
+        font-size: 55px;
+        text-align: justify;
+        padding: 20px;
+        margin-top: 10px;
+    }
+
+    .anotherParagraphs {
+        font-size: 28px;
+        margin: 20px;
+    }
+
+    .linksWeb {
+        text-decoration: none;
+        font-size: 30px;
+        margin: 20px;
+        color: #2E71A6   
+    }
+
+    #section-1 {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    #section-2 {
+    background-color: white;
+
+    }
+
+    #large-small-rely {
+        font-size: 58px;
+        text-align: justify;
+        padding: 20px;
+        margin-top: 10px;
+        text-align: center;
+    }
+
+    #oneParagraph {
+        font-size: 28px;
+        margin: 20px;
+        text-align: center;
+    }
+
+    #divOne {
+        display: grid;
+        grid-template-rows: 50px 50px;
+    }
+
+    #enterpriseButon {
+        font-size: 28px;
+        background-color: #540B51;
+        color: white;
+        border-radius: 10px;
+    }
+
+    #salesButon {
+        font-size: 28px;
+        background-color: white;
+        border-color: #540B51;
+        border-radius: 10px;
+    }
+
+    #no-bullets {
+        list-style: none;
+    }
+
+    .liFather {
+        text-align: center;
+    }
+
+    .porcentaje {
+        font-size: 60px;
+        color:#540B51
+    }
+
+    .porcentajeText {
+        font-size: 28px;
+    }
+
+    #section-3 {
+        background-color: #540B51;
+        width: 100%;
+        text-align: center;
+        color: white;
+        font-size: 55px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+
+    #freeButon {
+        font-size: 50px;
+        color:#540B51;
+        border-radius: 10px;
+    }
+
+    #salesButon {
+        font-size: 50px;
+        color: white;
+        background-color: #540B51;
+        border-radius: 10px;
+        border: 2px solid white;
+    }
+
+    #whiteColor {
+        background-color: white;
+    }
+
+    #logo-de-slack {
+        margin: 50px;
+    }
+
+    #gridsThings {
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20%;
+        justify-content: space-around;
+    }
+
+    .finishingGrids {
+        display: grid;
+        grid-template-rows: 50px 50px 50px 50px 50px;
+        font-size: 18px;
+        list-style: none;
+        color: #454245
+    }
+
+    .soloNegrita {
+        font-weight: bold;
+        color: black;
+    }
+
+    #terms {
+        font-weight: bold;
+        display: grid;
+        grid-template-rows: 50px 50px 50px 50px 50px;
+        font-size: 18px;
+        list-style: none;
+    }
+
+    #emoSocialMedia {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        list-style: none;
+    }
+
+    #differentLink {
+        color: #2E71A6
+    }
+
+    #theFooter {
+        color: #454245;
+        text-align: center;
+    }
+
+
+    }
+
+
+
+
+
+
+
+
+
+
+@media(max-width: 1024px) {
+    body {
+        width: 100%;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        background-color: #540B51;
+    }
+
+    #first1Section {
+    display: flex;
+    flex-direction: row;
+    }
+
+    #firstDiv {
+
+
+    }
+
+    #secondDiv {
+    position: relative;
+    top: 400px;
+    left: 200px;
+
+    }
+
+    main {
+        background-color: #F3EAE2;
+    }
+
+    nav div #slackLogo {
+        width: 250px; 
+        margin: 40px; 
+        }
+        
+    nav div #searchIconButon {
+        position: absolute;
+        top: 10px;
+        right: 90px;
+        }
+
+    nav div #menuIconButon {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        }
+        
+    nav div button {
+        background-color: transparent;
+        border: none;
+        margin: 15px;
+    }
+
+    .searchAndMenu {
+        width: 40px;
+        margin: 20px;
+    }
+
+    .searchAndMenu {
+        width: 40px;
+        margin: 20px;
+    }
+
+    #mainTitle {
+        display: flex;
+        flex-direction: column;
+        color: white;
+        font-size: 5rem;
+    }
+
+    #justYellow {
+        color: #ECB12F
+    }
+
+    header h1{
+        text-align: center;
+    }
+
+    .slackIsFree {
+        text-align: center;
+        font-size: 50px;
+    }
+
+    #email-google {
+        display: flex;
+        flex-direction: column;
+    }
+    #emailButon {
+        text-decoration: none;
+        border-radius: 5px;
+        border-style: none;
+        width: 100%;
+        height: 50px;
+        color: #540B51;
+        font-size: 25px;
+        font-weight: bold;
+    }
+
+    #textGoogle {
+    font-size: 25px;
+    font-weight: bold;
+    background-color: #4285F4;
+    width: 100%;
+    border-radius: 5px;
+    }
+    /* no llego a entender como hacerlo*/
+    #googleButon {
+    text-decoration: none;
+    border-radius: 5px;
+    border-style: none;
+    width: 40px;
+    }
+
+    #socialMedia {
+    background-color: #F3EAE2;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    }
+
+    .nasa {
+    width: 100px;
+    }
+    .airbnb {
+    width: 100px;
+    }
+
+    .NYTimes {
+    width: 250px;
+    }
+
+    .cropPic {
+    width: 100%
+    } 
+
+    .slackPics {
+    width: 80%
+    }
+
+    #flexibility {
+    position: relative;
+    left: 20%
+    }
+
+    #socialMediaPhrase {
+    font-size: 36px;
+    text-align: center;
+    margin-top: 0;
+    padding: 50px;
+    }
+
+    .anotherTitles {
+        font-size: 55px;
+        text-align: justify;
+        padding: 20px;
+        margin-top: 10px;
+    }
+
+    .anotherParagraphs {
+        font-size: 28px;
+        margin: 20px;
+    }
+
+    .linksWeb {
+        text-decoration: none;
+        font-size: 30px;
+        margin: 20px;
+        color: #2E71A6   
+    }
+
+    #section-1 {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    #section-2 {
+        background-color: white;
+
+    }
+
+    #large-small-rely {
+        font-size: 58px;
+        text-align: justify;
+        padding: 20px;
+        margin-top: 10px;
+        text-align: center;
+    }
+
+    #oneParagraph {
+        font-size: 28px;
+        margin: 20px;
+        text-align: center;
+    }
+
+    #divOne {
+        display: grid;
+        grid-template-rows: 50px 50px;
+    }
+
+    #enterpriseButon {
+        font-size: 28px;
+        background-color: #540B51;
+        color: white;
+        border-radius: 10px;
+    }
+
+    #salesButon {
+        font-size: 28px;
+        background-color: white;
+        border-color: #540B51;
+        border-radius: 10px;
+    }
+
+    #no-bullets {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .liFather {
+        text-align: center;
+    }
+
+    .porcentaje {
+        font-size: 60px;
+        color:#540B51
+    }
+
+    .porcentajeText {
+        font-size: 28px;
+    }
+
+    #section-3 {
+        background-color: #540B51;
+        width: 100%;
+        text-align: center;
+        color: white;
+        font-size: 55px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+
+    #freeButon {
+        font-size: 50px;
+        color:#540B51;
+        border-radius: 10px;
+    }
+
+    #salesButon {
+        font-size: 50px;
+        color: white;
+        background-color: #540B51;
+        border-radius: 10px;
+        border: 2px solid white;
+    }
+
+    #whiteColor {
+        background-color: white;
+    }
+
+    #logo-de-slack {
+        margin: 50px;
+    }
+
+    #gridsThings {
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20%;
+        justify-content: space-around;
+    }
+
+    .finishingGrids {
+        display: grid;
+        grid-template-rows: 50px 50px 50px 50px 50px;
+        font-size: 18px;
+        list-style: none;
+        color: #454245
+    }
+
+    .soloNegrita {
+        font-weight: bold;
+        color: black;
+    }
+
+    #terms {
+        font-weight: bold;
+        display: flex;
+        justify-content: space-evenly;
+        list-style: none;
+    }
+
+    #emoSocialMedia {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        list-style: none;
+    }
+
+    #differentLink {
+        color: #2E71A6
+    }
+
+    #theFooter {
+        color: #454245;
+        text-align: center;
+    }
+
+    }
+
+
+
+
+/* A ver, se ha podido dar cuenta de que no me aclaro mmucho con esto.
+es decir, más o menos estoy vienod resultados parecidos pero no de 
+la manera más fácil y tampoco muy limpios por así decirlo.
+Mis compañeros me han explicado algunas cosas pero todavía no entiendo muy bien los conceptos de 
+grid y flexbox. Cabe destacar que tengo que informarme más a fondo también
+sobre padding y margin. El caso es, la tercera iteración ya se me ha descuadrado entera
+y tampoco sé si tengo que ir copiando y pegando el código según 
+el tamaño del media. He entendido muchos conceptos ahora haciendo esta actividad,
+peeeeeeeeeeeero no he obtenido muy buenos resultados :(*/
